--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
 # Repositorio GIT para topindicados.com
+
+#### O site top indicados tem como objetivo concentrar o maior numero de locais da cidade e suas devidas avaliações, além de uma seção de forum que visa tirar duvida dos usuários.
